# object_classification_v2

./: .gitignore  .pre-commit-config.yaml  README.md  Tiltfile  architecture.drawio  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  readme.md  ruff.toml  start_all_service.sh  stop_all_service.sh
.github/workflows/: build_container.yml
deployment/cloud/: cloud_gateway.yaml  coredns_custom.yaml  deploy.sh  ml_consumer.yaml  rabbitmq_k8s.yaml  scylladb.yaml
deployment/cloud_service/: cloud_gateway.yaml  deploy.sh  docker-compose.yml  ml_consumer.yaml  mongo_k8s.yaml  rabbitmq_k8s.yaml
deployment/edge/: EfficientNetB0.yaml  EfficientNetB0_gpu.yaml  MobileNetV2.yaml  MobileNetV2_gpu.yaml  apply.sh  apply_gpu.sh  coredns_custom.yaml  ensemble.yaml  gateway.yaml  hpa.yaml  jaeger_collector.yaml  observability_route.yaml  preprocessing.yaml  remove.sh  remove_gpu.sh
deployment/edge/cilium_policy/: EfficientNetB0_policy.yml  MobileNetV2_policy.yml  ensemble_policy.yml  preprocessing_policy.yml
deployment/helm_charts/: README.md  install_helm.sh  uninstall.sh  values.yaml
deployment/helm_charts/alloy/: README.md  values.yaml
deployment/helm_charts/chaos-mesh/: README.md  install.sh  rbac.yaml
deployment/helm_charts/cilium/: README.md  cilium_lb_ippool_edge.yaml  gateway.yaml  l2_announcement_policy.yaml  observability_route.yaml  values_cloud.yaml  values_edge.yaml
deployment/helm_charts/flink/: Dockerfile.pyflink_baseimage  install.sh  values.yaml
deployment/helm_charts/grafana/: README.md  values.yaml
deployment/helm_charts/jaeger/: test.yaml  values.yaml
deployment/helm_charts/loki/: gateway.yaml  values.yaml
deployment/helm_charts/longhorn/: README.md  gateway.yaml  values.yaml
deployment/helm_charts/otel/: install.sh  test.yaml  values_cloud.yaml
deployment/helm_charts/prom_kafka_adapter/: node_adapter.yaml  pod_adapter.yaml  service_adapter.yaml
deployment/helm_charts/prometheus/: README.md  anomaly_detection.yaml  blackbox_exporter.yaml  values_cloud.yaml  values_edge.yaml
deployment/helm_charts/redpanda/: gateway.yaml  install_crd.sh  redpanda-cluster.yaml  topic.yaml
deployment/helm_charts/tempo/: tempo_distributor.yaml  values.yaml
deployment/k8s/: EfficientNetB0.yaml  EfficientNetB0.yml  EfficientNetB0_gpu.yaml  EfficientNetB0_gpu.yml  MobileNetV2.yaml  MobileNetV2.yml  MobileNetV2_gpu.yaml  MobileNetV2_gpu.yml  apply.sh  ensemble.yaml  ensemble.yml  gateway.yml  install_requirement.sh  jaeger.yml  metallb_config.yml  preprocessing.yaml  preprocessing.yml  rabbit_operator.yml  rabbitmq_cluster.yml  remove.sh
src/: README.md  compose.yaml  docker-compose.yaml  docker-compose.yml
src/artifact/dataset/imagenet/: split_into_classes.py
src/artifact/model_test/: Dockerfile  create_saved_model.py  tflite_convert.py  tflite_predict.py
src/artifact/model_test/onnx/: Dockerfile  Dockerfile.onnx_accuracy_profiling  Dockerfile.onnx_model_test  Dockerfile.onnx_runtime  README.md  accuracy_profiling.py  accurary_profiling.py  classes.py  create_graph_optimized_onnx_model.py  create_onnx_model.py  create_onnx_requirements.txt  prediction_test.py  run_all_accuracy_profiling.sh  tflite_to_onnx.sh
src/artifact/model_test/onnx/results/: DenseNet201.csv  EfficientNetB0.csv  EfficientNetB7.csv  InceptionV3.csv  MobileNetV2.csv  ResNet50V2.csv
src/artifact/model_test/onnx/results/jetxavier_model_only/: DenseNet121.csv  EfficientNetV2L.csv  EfficientNetV2S.csv  InceptionResNetV2.csv  MobileNet.csv  NASNetLarge.csv  NASNetMobile.csv  ResNet50.csv  VGG16.csv  Xception.csv
src/artifact/model_test/tflite/: Dockerfile  result.txt  tflite_latency_test.py  tflite_predict.py
src/artifact/model_test/tflite/serve/: Dockerfile  tflite_client.py  tflite_rest.py
src/client/: client.py  client_inference.py  client_processing.py  pyproject.toml
src/consul/: docker-compose.yaml  resetConsul.yaml  reset_consul.py
src/database/: Dockerfile  config.yaml  delete_records.py  ml_consumer.py  pyproject.toml  query_mongo.py  schema.cql  simple_publisher.py
src/ensemble/: Dockerfile  Dockerfile.ziti  README.md  docker_build.sh  docker_run.sh  ensemble.py  ensemble_function.py  ensemble_service.yaml  pyproject.toml  requirements.txt  run_server.sh  ziti_start.sh
src/gateway/: Caddyfile
src/image_info/: Dockerfile  image_info.py  image_info_config.yaml  requirements.txt
src/inference/: Dockerfile.cpu  Dockerfile.cpu.ziti  Dockerfile.cuda  Dockerfile.cuda.ziti  Dockerfile.gpu  Dockerfile.onnx_runtime  Dockerfile.tensorrt  README.md  datamodel.py  docker_build.sh  docker_run.sh  image_classification_agent.py  inference.py  inference_service.yaml  inference_service_config.yaml  object_classification_agent.py  pyproject.toml  requirements.txt  requirements_cuda.txt  rohe_ml_agent.py  run_server.sh  ziti_start.sh
src/inference_coral/: README.md  datamodel.py  image_classification_agent.py  inference.py  inference_service_config.yaml  pyproject.toml  requirements.txt  run_server.sh  test.py  tflite_to_onnx.sh
src/ingestion/: Dockerfile  ingestion.py  ingestion_config.yaml  requirements.txt
src/llm_service/: .env  Dockerfile  llm_service.py  pyproject.toml  run_server.sh
src/loadgen/: Dockerfile.ziti  README.md  load_test_para.py  output.html  ziti_start.sh
src/ml_consumer/: Dockerfile  delete_records.py  ml_consumer.py  pyproject.toml
src/model_test/: create_saved_model.py  prediction_test.py  tflite_convert.py  tflite_latency_test.py  tflite_predict.py
src/other_service/: compose.yaml  docker-compose.yaml
src/preprocessing/: Dockerfile  Dockerfile.ziti  README.md  docker_build.sh  docker_run.sh  image_processing_functions.py  preprocessing.py  preprocessing_config.yaml  processing.py  pyproject.toml  run_server.sh
src/processing/: Dockerfile  docker_build.sh  executor.py  image_processing_functions.py  processing.py  processing_config.yaml  requirements.txt  run_server.sh
src/util/: consul.py  load_image.py  preprocessing.py  pyproject.toml  utils.py
src/util/src/util/: utils.py
