[project]
name = "object_classification"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = "== 3.10.18"

[tool.uv.sources]
util = { workspace = true }

[tool.uv.workspace]
members = [
  # "src/*",
  "src/database",
  "src/ensemble",
  "src/inference",
  "src/preprocessing",
  "src/util",

]
