[project]
dependencies = ["requests", "numpy", "Pillow==10.4.0"]
name = "client"
version = "0.1.0"
requires-python = "== 3.9.19"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["*.py"]
