[project]
dependencies = [
  "fastapi[standard]>=0.111.1",
  "uvicorn[standard]>=0.30.3",
  "aiohttp>=3.9.5",
  "qoa4ml",
  "python-multipart",
]

name = "ensemble"
version = "0.1.0"
requires-python = "== 3.9.19"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["*.py"]
