[project]
dependencies = [
  "fastapi[standard]>=0.111.1",
  "uvicorn[standard]>=0.30.3",
  "aiohttp>=3.9.5",
  "python-multipart",
  "opentelemetry-distro>=0.48b0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation-aiohttp-client>=0.48b0",
  "aio-pika>=9.5.5",
  "opentelemetry-instrumentation-aio-pika>=0.54b1",
  "util",
]

name = "ensemble"
version = "0.1.0"
requires-python = "== 3.10.18"

[tool.uv.sources]
util = { workspace = true }
