[project]
dependencies = [
  "fastapi>=0.111.1",
  "aiohttp>=3.9.5",
  "uvicorn[standard]>=0.30.3",
  "opencv-python>=4.10.0.84",
  "requests",
  "qoa4ml",
  "python-multipart",
]
name = "preprocessing"
version = "0.1.0"
requires-python = "== 3.9.19"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["*.py"]
