[project]
dependencies = [
  "fastapi[standard]>=0.111.1",
  "aiohttp>=3.9.5",
  "uvicorn[standard]>=0.30.3",
  "opencv-python>=4.10.0.84",
  "requests",
  "python-multipart",
  "v>=1",
  "opentelemetry-distro>=0.48b0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation-aiohttp-client>=0.48b0",
]
name = "preprocessing"
version = "0.1.0"
requires-python = "== 3.10.18"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true
